k8s/order-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        # Replace 'yourusername' with your actual Dockerhub username if you pushed the image!
        # If testing locally on Docker Desktop, it will use your local image.
        image: tpvapi/order-service:v2
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 3002
      targetPort: 3002
