k8s/order-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-order-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-order
  template:
    metadata:
      labels:
        app: mongo-order
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-order
spec:
  selector:
    app: mongo-order
  ports:
    - port: 27017
      targetPort: 27017
