k8s/user-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deploy
spec:
  replicas: 2 # We want 2 instances running for high availability!
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: tpvapi/user-service:v1 # Replace with your Docker Hub name
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "100m"    # 100 millicores (10% of 1 CPU core)
            memory: "128Mi"
          limits:
            cpu: "250m"    # Max 25% of 1 CPU core
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
