k8s/user-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-user-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-user
  template:
    metadata:
      labels:
        app: mongo-user
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-user # This name is DNS! User service will use this to connect
spec:
  selector:
    app: mongo-user
  ports:
    - port: 27017
      targetPort: 27017
